Change the ID generation